--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
    {
      "name": "iñigo tamayo",
-    "email": "tamaxx@gmail.com",
+    "email": "tamaxx@gmail.com"
 
    }],
   "url": "https://github.com/itamayo/frame-extractor.git",
